[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 90
target-version = ['py38']
include = '\.py$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.tox
    | \.venv
    | \.misc
    | \.vscode
    | dist
    | external
    | .pytest_cache
    | build
    | build-release
    | build-omnitrace
  )/
)
'''
